--- a/blog_list.html
+++ b/blog_list.html
@@ -106,10 +106,12 @@
 
             <!-- Blog Post -->
             <div class="card mb-4">
-              <img class="card-img-top" src="https://via.placeholder.com/750x300" alt="Card image cap">
+              <img class="card-img-top" src="./images/꽃을쓰는작업.jpg" width="750x300" alt="Card image cap">
               <div class="card-body">
-                <h2 class="card-title">Post Title</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+                <h2 class="card-title">꽃을 쓰는 일을 멈추지 않을 것입니다.</h2>
+                <p> class="card-text">아직 만나지 못한 꽃들이 더 많은 까닭에
+                    꽃을 쓰는 일을 멈추지 않을 것입니다.
+                    안리타, 꽃을 쓰는 작업 中</p>
                 <a href="#" class="btn btn-primary">Read More &rarr;</a>
               </div>
               <div class="card-footer text-muted">
