--- a/blog_list.html
+++ b/blog_list.html
@@ -92,10 +92,10 @@
                     <h1>Myunghyun's Blog</h1>
                 <!-- Blog Post -->
             <div class="card mb-4">
-              <img class="card-img-top" src="https://via.placeholder.com/750x300" alt="Card image cap">
+              <img class="card-img-top" src="./images/맹현이.jpg" width="750x300" alt="Card image cap">
               <div class="card-body">
-                <h2 class="card-title">Post Title</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+                <h2 class="card-title">20210325 박명현</h2>
+                <p class="card-text">좋아하는 것: 사진, 전시 관람, 여유로운 삶, 간식</p>
                 <a href="#" class="btn btn-primary">Read More &rarr;</a>
               </div>
               <div class="card-footer text-muted">
