--- a/blog_list.html
+++ b/blog_list.html
@@ -92,7 +92,7 @@
                     <h1>Myunghyun's Blog</h1>
                 <!-- Blog Post -->
             <div class="card mb-4">
-              <img class="card-img-top" src="./images/맹현이.jpg" width="750x300" alt="Card image cap">
+              <img class="card-img-top" src="./images/맹현이.jpg" width="750" alt="Card image cap">
               <div class="card-body">
                 <h2 class="card-title">20210325 박명현</h2>
                 <p class="card-text">좋아하는 것: 사진, 전시 관람, 여유로운 삶, 간식</p>
@@ -106,10 +106,10 @@
 
             <!-- Blog Post -->
             <div class="card mb-4">
-              <img class="card-img-top" src="./images/꽃을쓰는작업.jpg" width="750x300" alt="Card image cap">
+              <img class="card-img-top" src="./images/꽃을쓰는작업.jpg" width="750" alt="Card image cap">
               <div class="card-body">
                 <h2 class="card-title">꽃을 쓰는 일을 멈추지 않을 것입니다.</h2>
-                <p> class="card-text">아직 만나지 못한 꽃들이 더 많은 까닭에
+                <p class="card-text"> 아직 만나지 못한 꽃들이 더 많은 까닭에
                     꽃을 쓰는 일을 멈추지 않을 것입니다.
                     안리타, 꽃을 쓰는 작업 中</p>
                 <a href="#" class="btn btn-primary">Read More &rarr;</a>
