--- a/blog_list.html
+++ b/blog_list.html
@@ -93,7 +93,7 @@
 
                  <!-- Blog Post -->
             <div class="card mb-4">
-              <img class="card-img-top" src="./images/a1.jpg" alt="Card image cap">
+              <img class="card-img-top" src="./images/a1.jpg" width='750' alt="Card image cap">
               <div class="card-body">
                 <h2 class="card-title">꽃을 쓰는 일을 멈추지 않을 것입니다.</h2>
                 <p class="card-text"> 아직 만나지 못한 꽃들이 더 많은 까닭에
@@ -114,7 +114,7 @@
 
                 <!-- Blog Post -->
             <div class="card mb-4">
-              <img class="card-img-top" src="./images/a2.jpg" alt="Card image cap">
+              <img class="card-img-top" src="./images/a2.jpg" width='750' alt="Card image cap">
               <div class="card-body">
                 <h2 class="card-title">20210325 박명현</h2>
                 <p class="card-text">좋아하는 것: 사진, 전시 관람, 여유로운 삶, 간식</p>
@@ -189,6 +189,14 @@
             </div>
                     </div>
                 </div>
+        <!-- Footer -->
+        <footer class="py-5 bg-dark">
+            <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Department of Digital Business 2021</p>
+            </div>
+            <!-- /.container -->
+        </footer>
+
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
